Added more info

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <br>
                 - Please read through and check all infromation and the staff profile link carefully.
                 <br>
+                - Hover over a button and scroll to copy the HTML of said item. Click the button to toggle viabaility of the item.
+                <br> 
             </p>
         </li>
     </ul>
