--- a/remnant_2_armour_calc/index.html
+++ b/remnant_2_armour_calc/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="index.js"></script>
+        <script src="init.js"></script>
     </head>
     <body>
         Homepage not implelemted
