--- a/remnant_2_armour_optimiser/index.html
+++ b/remnant_2_armour_optimiser/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="init.js"></script>
+        <script type="module" src="init.js"></script>
     </head>
     <body>
         <h1>This page is in progress</h1>
