Added results table

--- a/remnant_2_armour_optimiser/index.html
+++ b/remnant_2_armour_optimiser/index.html
@@ -9,32 +9,47 @@
         <div id="requirements">
             <table>
                 <tr>
-                    <td>Maximum Weight</th>
-                    <td><input id="maxWeightInput" type="number" min="-10" max="100" value="50"></th>
+                    <td>Maximum Weight</td>
+                    <td><input id="maxWeightInput" type="number" min="-10" max="100" value="50"></td>
                 </tr>
                 <tr>
-                    <td>Minimum Armour</th>
-                    <td><input id="minArmourInput" type="number" min="-10" max="100" value="-10"></th>
+                    <td>Minimum Armour</td>
+                    <td><input id="minArmourInput" type="number" min="-10" max="100" value="-10"></td>
                 </tr>
                 <tr>
-                    <td>Minimum Bleed</th>
-                    <td><input id="minBleedInput" type="number" min="-10" max="100" value="-10"></th>
+                    <td>Minimum Bleed</td>
+                    <td><input id="minBleedInput" type="number" min="-10" max="100" value="-10"></td>
                 </tr>
                 <tr>
-                    <td>Minimum Fire</th>
-                    <td><input id="minFireInput" type="number" min="-10" max="100" value="-10"></th>
+                    <td>Minimum Fire</td>
+                    <td><input id="minFireInput" type="number" min="-10" max="100" value="-10"></td>
                 </tr>
                 <tr>
-                    <td>Minimum Shock</th>
-                    <td><input id="minShockInput" type="number" min="-10" max="100" value="-10"></th>
+                    <td>Minimum Shock</td>
+                    <td><input id="minShockInput" type="number" min="-10" max="100" value="-10"></td>
                 </tr>
                 <tr>
-                    <td>Minimum Blight</th>
-                    <td><input id="minBlightInput" type="number" min="-10" max="100" value="-10"></th>
+                    <td>Minimum Blight</td>
+                    <td><input id="minBlightInput" type="number" min="-10" max="100" value="-10"></td>
                 </tr>
                 <tr>
-                    <td>Minimum Toxin</th>
-                    <td><input id="minToxinInput" type="number" min="-10" max="100" value="-10"></th>
+                    <td>Minimum Toxin</td>
+                    <td><input id="minToxinInput" type="number" min="-10" max="100" value="-10"></td>
+                </tr>
+            </table>
+        </div>
+
+        <div id="results">
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Armour</th>
+                    <th>Weight</th>
+                    <th>Bleed</th>
+                    <th>Fire</th>
+                    <th>Shock</th>
+                    <th>Blight</th>
+                    <th>Toxin</th>
                 </tr>
             </table>
         </div>
