Fixed button onclick

--- a/remnant_2_armour_optimiser/index.html
+++ b/remnant_2_armour_optimiser/index.html
@@ -37,7 +37,7 @@
                     <td><input id="minToxinInput" type="number" min="-10" max="100" value="-10"></td>
                 </tr>
             </table>
-            <button type="button" onclick="generateTable()">Generate Table</button>
+            <button id="generateTableButton" type="button">Generate Table</button>
         </div>
 
         <div id="results">
