--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="init.js"></script>
+        <script src="main.js"></script>
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         Homepage not implelemted
