--- a/remnant_2_armour_optimiser/index.html
+++ b/remnant_2_armour_optimiser/index.html
@@ -35,6 +35,10 @@
                 <td>Minimum Toxin</td>
                 <td><input id="minToxinInput" class="FillWidth" type="number" min="-1" max="10" value="-1"></td>
             </tr>
+            <tr>
+                <td>Number Of Results</td>
+                <td><input id="noOfResultsInput" class="FillWidth" type="number" min="1" value="100"></td>
+            </tr>
         </table>
         <button id="generateTableButton" type="button">Generate Table</button>
         <br>
