--- a/remnant_2_armour_optimiser/index.html
+++ b/remnant_2_armour_optimiser/index.html
@@ -37,7 +37,7 @@
             </tr>
             <tr>
                 <td>Number Of Results</td>
-                <td><input id="noOfResultsInput" class="FillWidth" type="number" min="1" value="100"></td>
+                <td><input id="noOfResultsInput" class="FillWidth" type="number" min="1" max="999" value="50"></td>
             </tr>
         </table>
         <button id="generateTableButton" type="button">Generate Table</button>
